--- a/my_list.html
+++ b/my_list.html
@@ -1,3 +1,3 @@
-"Love Will Tear Us Apart"
-"A Forest"
-"Nine While Nine"
+<li>"Love Will Tear Us Apart"</li>
+<li>"A Forest"</li>
+<li>"Nine While Nine"</li>
